--- a/rn-social/package.json
+++ b/rn-social/package.json
@@ -15,21 +15,24 @@
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
+    "@reduxjs/toolkit": "^1.8.6",
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
+    "expo-camera": "~12.3.0",
     "expo-font": "~10.2.0",
+    "expo-location": "~14.3.0",
+    "expo-media-library": "~14.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^8.2.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "expo-camera": "~12.3.0",
-    "expo-location": "~14.3.0",
-    "expo-media-library": "~14.2.0",
-    "react-native-maps": "0.31.1"
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
